@@ -41,7 +41,20 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 </div>
 <div id="main">
 <div id="info">
-<div id="console"></div>
+<div id="console">
+<div id="leftPane">
+<div class="infoBackground"></div>
+</div>
+<div id="rightPane">
+<div id="infoDivider"></div>
+<div id="variables">
+<div class="infoBackground"></div>
+<table id="variablesTable">
+<tr class="column"><th>Variable</th><th>Value</th></tr>
+</table>
+</div>
+</div>
+</div>
 <div id="divider"></div>
 </div>
 <div id="body">
