@@ -1,3 +1,10 @@
+2006-06-22  Kevin Decker         <kdecker@apple.com>
+
+        Reviewed by Tim Hatcher.
+
+        - More progress toward Javascript Debugger. 
+        - Added some new images to the project. 
+
 2006-06-21  Alexey Proskuryakov  <ap@nypop.com>
 
         Reviewed by Anders.
